@@ -23,6 +23,18 @@ Version 1.7.7
        dialog can cause a crash. (Stefan)
 - BUG: Issue #244: Crash with hotkeys in
        TortoiseMerge. (Stefan)
+- BUG: Issue #245: progress dlg can be closed
+       while threads are running. (Stefan)
+- BUG: Issue #246: crash in file
+       diff dialog. (Stefan)
+- BUG: Issue #247: crash when reading
+       properties fails. (Stefan)
+- BUG: Issue #248: division-by-zero with empty
+       file in TMerge. (Stefan)
+- BUG: Issue #249: invalid file crashes
+       TortoiseBlame. (Stefan)
+- BUG: Issue #250: invalid icon files crash
+       TortoiseIDiff. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
